Fix upload docs

--- a/src/js/sekolah/pendaftaran/sekolah-home.pendaftaran.html
+++ b/src/js/sekolah/pendaftaran/sekolah-home.pendaftaran.html
@@ -105,6 +105,12 @@
             </div>
         </div>
     </div>
+
+    <div class="alert alert-danger" id="upload-proses">
+        <h4>Perhatian</h4>
+        Mohon tunggu sebentar, proses upload sedang berlangsung ... <br /> JANGAN KLIK TOMBOL KIRIM DAN MENDAFTARAN APABILA PROSES UPLOAD BELUM SELESAI.
+    </div>
+
     <button type="button" validation-submit="Form" ng-click="pendaftaran()" class="btn btn-primary">
         Kirim dan Mendaftar
     </button>
