--- a/src/js/sekolah/pendaftaran/sekolah-home.pendaftaran.html
+++ b/src/js/sekolah/pendaftaran/sekolah-home.pendaftaran.html
@@ -122,7 +122,7 @@
 <br />
 <br />
 
-<div class="" ng-show="sekolah.kode">
+<div class="" ng-show="success">
 
     <div class="panel panel-info">
         <div class="panel-heading">
