--- a/release/index.html
+++ b/release/index.html
@@ -5,6 +5,7 @@
     <title>Alpha</title>
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/bower_components/datetimepicker/dist/DateTimePicker.min.css">
+    <link rel="stylesheet" href="/vendors/octicons/octicons.css">
     <link rel="stylesheet" href="/css/app.min.css">
   </head>
   <body>
@@ -35,6 +36,7 @@
     <script src="/bower_components/bootstrap/js/affix.js"></script>
 
     <script src="/js/templates.js"></script>
+    <script src="/js/superagent.js"></script>
     <script src="/js/instrumen.js"></script>
     <script src="/js/daerah.js"></script>
     <script src="/js/program.js"></script>
