--- a/src/js/base/home.html
+++ b/src/js/base/home.html
@@ -23,7 +23,7 @@
         <div class="col-sm-8 col-md-8  col-md-offset-2 col-sm-offset-2">
         	<h1 class="page-header">Sistem Penskoran Akreditasi</h1>
 			<p class="lead">Aplikasi Penskoran dan Pemeringkatan Hasil Akreditasi</p>
-		    
+
 		    <ul class="list-group">
 		    	<li class="list-group-item">
 		    		<a ui-sref="sekolah">
@@ -42,7 +42,18 @@
 		    		</a>
 		    	</li>
 		    </ul>
-            
+
+
+            <hr />
+
+            <div class="">
+                Designed and build with love by <a href="https://github.com/purwandi">@purwandi</a>
+
+                <div class="pull-right">
+                    <iframe src="https://ghbtns.com/github-btn.html?user=bapsm&repo=alpha&type=star&count=true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
+                    <iframe src="https://ghbtns.com/github-btn.html?user=bapsm&repo=alpha&type=watch&count=true&v=2" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
+                </div>
+            </div>
 
         </div>
     </div>
