--- a/src/js/asesor/asesor-visitasi.html
+++ b/src/js/asesor/asesor-visitasi.html
@@ -1,59 +1,290 @@
-<style type="text/css">
-	h4 {
-		font-size: 18px;
-		font-weight: 300;
-		line-height: 1.2;
-	}
-	.media {
-		margin-bottom: 40px
-	}
-</style>
-<p>
-	<span class="pull-right">{{ vm.prodi.nama }}</span>
-	{{ vm.sekolah.nama }}
-</p>
+<a ui-sref="asesor.base">DAFTAR SEKOLAH </a> / {{ vm.sekolah.nama }}
 <hr />
 
-<table class="table table-condensed table-bordered">
-	<thead>
-		<tr>
-			<th rowspan="2" class="text-center" style="vertical-align: middle;">No</th>
-			<th colspan="4" class="text-center">Pengisian Menurut</th>
-			<th rowspan="2" class="text-center" style="vertical-align: middle;">Keterangan</th>
-		</tr>
-		<tr>
-			<th class="text-center">Sekolah</th>
-			<th class="text-center">Asesor&nbsp;1</th>
-			<th class="text-center">Asesor&nbsp;2</th>
-			<th class="text-center">Kelompok</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr ng-repeat="butir in vm.butir">
-			<td width="1%" class="text-center">{{ butir.nomor }}</td>
-			<td width="1%"><input type="text" class="form-control input-sm" placeholder="" /></td>
-			<td width="1%"><input type="text" class="form-control input-sm" placeholder="" /></td>
-			<td width="1%"><input type="text" class="form-control input-sm" placeholder="" /></td>
-			<td width="1%"><input type="text" class="form-control input-sm" placeholder="" /></td>
-			<td><input type="text" class="form-control input-sm" placeholder="Keterangan" /></td>
-		</tr>
-	</tbody>
-</table>
-
-<!-- <div class="media" ng-repeat="butir in vm.butir">
-  	<div class="media-left">
-      	<h4>{{ butir.nomor }}</h4>
-  	</div>
-  	<div class="media-body" style="padding: 0px 8px;">
-    	<h4 class="media-heading">{{ butir.nama }}</h4>
-    	<div class="radio" ng-repeat="opsi in butir.pilihan">
-            <label ng-click="vm.onSelectButir()">
-                <input type="radio" ng-model="vm.visitasi.id" name="pilihan_{{ butir.nomor }}" value="{{ opsi.nilai}}" >
-                {{ opsi.nama }}
-            </label>
+<div class="list-group" >
+    <div class="list-group-item relax">
+        <div class="pull-right">
+            <div class="ui mini statistics">
+                <div class="statistic">
+                    <div class="value">
+                        {{ vm.sekolah.prodi.hasil.evaluasi.peringkat }} ( {{ vm.sekolah.prodi.hasil.evaluasi.nilai }} )
+                    </div>
+                    <div class="label">
+                        Evaluasi diri
+                    </div>
+                </div>
+                <div class="statistic">
+                    <div class="value">
+                        {{ vm.sekolah.prodi.hasil.visitasi.peringkat }} ( {{ vm.sekolah.prodi.hasil.visitasi.nilai }} )
+                    </div>
+                    <div class="label">
+                        Visitasi
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <hr style="margin-bottom: 0px" />
-        <textarea class="form-control" placeholder="Berilah keterangan apabila terdapat perbedaan jawaban"></textarea>
-  	</div>
-</div> -->
+        <div class="text-danger"><p>{{ vm.sekolah.nama }}</p></div>
+        <div>{{ vm.sekolah.prodi.nama }}</div>
+        <div class="">{{ vm.sekolah.alamat }}</div>
+        <div>{{ vm.sekolah.daerah.kelurahan.nama }} {{ vm.sekolah.daerah.kecamatan.nama }} {{ vm.sekolah.daerah.kota.nama }}</div>
+        <div><span class="octicon octicon-device-mobile"></span> {{ vm.sekolah.nomor_telepon }} - {{ vm.sekolah.nomor_hp}}</div>
+
+        <div style="margin: 30px 0">
+            <ul class="nav nav-tabs">
+                <li role="presentation" class="{{ vm.tab == 'instrumen' ? 'active': '' }}">
+                    <a href="javascript:void(0)" ng-click="vm.switchTab('instrumen')">Instumen</a>
+                </li>
+                <li role="presentation" class="{{ vm.tab == 'rekomendasi' ? 'active': '' }}">
+                    <a href="javascript:void(0)" ng-click="vm.switchTab('rekomendasi')">Rekomendasi</a>
+                </li>
+                <li role="presentation" class="{{ vm.tab == 'hasil' ? 'active': '' }}">
+                    <a href="javascript:void(0)" ng-click="vm.switchTab('hasil')">Hasil pengisian</a>
+                </li>
+                <li role="presentation" class="{{ vm.tab == 'sinkronisasi' ? 'active': '' }}">
+                    <a href="javascript:void(0)" ng-click="vm.switchTab('sinkronisasi')">Sinkronisasi</a>
+                </li>
+            </ul>
+        </div>
+
+        <!-- TAB INSTRUMEN -->
+        <div ng-show="vm.tab == 'instrumen'">
+            <div class="panel panel-default">
+                <table class="table">
+                    <tbody>
+                        <tr>
+                            <td width="1%">#{{ vm.instrumen.instrumen.nomor }}</td>
+                            <td><strong>{{ vm.instrumen.instrumen.right_nama }}</strong> </td>
+                            <td><strong>{{ vm.instrumen.instrumen.right_bobot }}</strong> <small>Bobot</small></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="panel-heading" style="border-top: 1px solid #ddd;border-radius: 0px;">
+                    {{ vm.instrumen.instrumen.nama }}
+                </div>
+                <div class="panel-body">
+                    <ol type="A">
+                        <li ng-repeat="pilihan in vm.instrumen.instrumen.pilihan"> {{ pilihan.nama }}</li>
+                    </ol>
+                </div>
+            </div>
+
+
+            <hr />
+
+            <table class="table table-bordered">
+                <thead>
+                    <th class="text-center" width="9%">No</th>
+                    <th class="text-center" width="15%">Evaluasi Diri</th>
+                    <th class="text-center" colspan="2">Asesor 1</th>
+                    <th class="text-center" colspan="2">Asesor 2</th>
+                    <th class="text-center" colspan="2">Kelompok</th>
+                </thead>
+                <tbody>
+                    <td>
+                        <input
+                            type="number"
+                            min="1" max="{{ vm.total }}"
+                            ng-model="vm.nomor"
+                            class="form-control input-sm text-center">
+                    </td>
+                    <td class="text-center">{{ vm.instrumen.evaluasi.jawaban | toAlpa }}</td>
+                    <td>
+                        <input
+                            type="text"
+                            ng-model="vm.instrumen.visitasi.asesor1Huruf"
+                            class="form-control input-sm text-center"
+                            ng-pattern="/^[A-Ea-e]+$/"
+                            ng-keypress="vm.onKeyPress($event)"
+                            required
+                            placeholder="A, B, C, D atau E"
+                            maxlength="1">
+                    </td>
+                    <td width="80px" class="text-center">
+                        {{ vm.instrumen.visitasi.asesor1 = (vm.instrumen.visitasi.asesor1Huruf | toNumber) }}
+                    </td>
+                    <td >
+                        <input
+                            type="text"
+                            ng-model="vm.instrumen.visitasi.asesor2Huruf"
+                            class="form-control input-sm text-center"
+                            ng-pattern="/^[A-Ea-e]+$/"
+                            ng-keypress="vm.onKeyPress($event)"
+                            required
+                            placeholder="A, B, C, D atau E"
+                            maxlength="1">
+
+                    </td>
+                    <td width="80px" class="text-center">
+                        {{ vm.instrumen.visitasi.asesor2 = (vm.instrumen.visitasi.asesor2Huruf | toNumber) }}
+                    </td>
+                    <td>
+                        <input
+                            type="text"
+                            ng-model="vm.instrumen.visitasi.jawabanHuruf"
+                            class="form-control input-sm text-center"
+                            ng-pattern="/^[A-Ea-e]+$/"
+                            ng-keypress="vm.onKeyPress($event)"
+                            required
+                            placeholder="A, B, C, D atau E"
+                            maxlength="1">
+                    </td>
+                    <td width="80px" class="text-center">
+                        {{ vm.instrumen.visitasi.jawaban = (vm.instrumen.visitasi.jawabanHuruf | toNumber) }}
+                    </td>
+                </tbody>
+            </table>
+
+            <textarea class="form-control" rows="4" required ng-model="vm.instrumen.visitasi.ket" placeholder="Catatan butir"></textarea>
+
+            <div class="hide">
+                {{ vm.instrumen.visitasi.hasil = vm.instrumen.visitasi.jawaban * vm.instrumen.instrumen.bobot }}
+            </div>
+
+            <hr />
+
+            <div class="pull-right" ng-show="vm.nomor == vm.total ">
+                <button class="btn btn-blue" ng-click="vm.save()">Simpan kalkulasi</button>
+            </div>
+
+            <button class="btn btn-default" ng-click="vm.prev()"><span class="octicon octicon-chevron-left"></span></button>
+            <button class="btn btn-default" ng-click="vm.next()"><span class="octicon octicon-chevron-right"></span></button>
+        </div>
+        <!-- END TAB INSTRUMEN -->
+
+        <!-- TAB REKOMENDASI -->
+        <div ng-show="vm.tab == 'rekomendasi'">
+            <p>Berdasarkan hasil visitasi, tuliskan saran  dan rekomendasi untuk setiap standar dalam rangka pembinaan, pengembangan, dan peningkatan mutu sekolah/madrasah. Saran dan rekomendasi hendaknya bersifat spesifik sesuai dengan hasil temuan</p>
+
+            <br />
+            <div class="panel panel-default" ng-repeat="komponen in vm.sekolah.prodi.komponen">
+                <div class="panel-heading">{{ komponen.instrumen.nama }}</div>
+                <textarea class="form-control" ng-model="komponen.visitasi.ket" rows="8" style="border: none" placeholder="Tuliskan rekomendasi ..." required></textarea>
+            </div>
+
+            <hr />
+            <button class="btn btn-blue" ng-click="vm.saveRekomendasi()">Simpan rekomendasi</button>
+        </div>
+        <!-- END TAB REKOMENDASI -->
+
+        <!-- TAB HASIL -->
+        <div ng-show="vm.tab == 'hasil'">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Komponen</th>
+                        <th colspan="2" class="text-center">Skor</th>
+                        <th colspan="2" class="text-center">Nilai</th>
+                        <th colspan="2" class="text-center">Ratusan</th>
+                        <th class="text-center">Kelayakan</th>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <th class="text-center">Eva</th>
+                        <th class="text-center">Vis</th>
+                        <th class="text-center">Eva</th>
+                        <th class="text-center">Vis</th>
+                        <th class="text-center">Eva</th>
+                        <th class="text-center">Vis</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="komponen in vm.sekolah.prodi.komponen">
+                        <td>{{ komponen.instrumen.nama }}</td>
+                        <td class="text-center">{{ komponen.evaluasi.skor }}</td>
+                        <td class="text-center">{{ komponen.visitasi.skor }}</td>
+                        <td class="text-center">{{ komponen.evaluasi.nilai }}</td>
+                        <td class="text-center">{{ komponen.visitasi.nilai }}</td>
+                        <td class="text-center">{{ komponen.evaluasi.nilai_ratusan }}</td>
+                        <td class="text-center">{{ komponen.visitasi.nilai_ratusan }}</td>
+                        <td class="text-center">{{ komponen.visitasi.kelayakan }}</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <th colspan="3">Nilai akhir visitasi</th>
+                        <th class="text-center">{{ vm.sekolah.prodi.hasil.evaluasi.nilai }}</th>
+                        <th class="text-center">{{ vm.sekolah.prodi.hasil.visitasi.nilai }}</th>
+                        <th colspan="3"></th>
+                    </tr>
+                    <tr>
+                        <th colspan="3">Nilai akhir visitasi (pembulatan) </th>
+                        <th class="text-center">{{ vm.sekolah.prodi.hasil.evaluasi.nilai }}</th>
+                        <th class="text-center">{{ vm.sekolah.prodi.hasil.visitasi.nilai_akhir }}</th>
+                        <th colspan="3"></th>
+                    </tr>
+                    <tr>
+                        <th colspan="3">Peringkat hasil visitasi</th>
+                        <th></th>
+                        <th class="text-center">{{ vm.sekolah.prodi.hasil.visitasi.peringkat_akhir }}</th>
+                        <th colspan="3"></th>
+                    </tr>
+                </tfoot>
+            </table>
+        </div>
+        <!-- END TAB HASIL -->
+
+        <!-- TAB SINKRONISASI -->
+        <div ng-show="vm.tab == 'sinkronisasi'">
+
+            <div class="alert alert-danger" id="upload-proses">
+                <h4>Perhatian</h4>
+                Mohon tunggu sebentar, proses upload sedang berlangsung ... <br /> JANGAN KLIK TOMBOL KIRIM DAN MENDAFTARAN APABILA PROSES UPLOAD BELUM SELESAI.
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div style="border-right: 1px solid #ddd;">
+                        <p>Untuk mendukung pelaksanaan visitasi yang tim anda lakukan, uploadlah dokumen instrumen pengumpulan data dan informasi pendukung sekolah/madrasah sebagai alat bukti pendukung kondisi real sekolah/madrasah.</p>
+                        <br />
+
+                        {{ vm.sekolah.prodi.hasil.visitasi.dokumen }}
+                        <upload-file ng-model="vm.sekolah.prodi.hasil.visitasi.dokumen" data-file="docs"></upload-file>
+                        <small class="help-block">File dalam bentuk pdf, maksimum file 2M</small>
+                    </div>
+                </div>
+                <div class="col-md-6 text-center">
+                    <p>Tekan tombol di bawah ini untuk melakukan sinkronisasi data pengisian hasil visitasi.</p> <br />
+                    <button class="btn btn-primary btn-lg" ng-click="vm.sinkronisasi()">
+                        <span class="octicon octicon-sync"></span> Sinkronisasi
+                    </button>
+                </div>
+            </div>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th style="border-top: 1px solid #DDD">Terakhir sinkronisasi</th>
+                        <th style="border-top: 1px solid #DDD">Dokumen pendukung</th>
+                        <th style="border-top: 1px solid #DDD">Hasil visitasi</th>
+                        <th style="border-top: 1px solid #DDD">Cetak</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            {{ vm.sekolah.prodi.hasil.last_sync }}
+                        </td>
+                        <td>
+                            <a href="{{ vm.sekolah.prodi.hasil.visitasi.dokumen }}">
+                                {{ vm.sekolah.prodi.hasil.visitasi.dokumen }}
+                            </a>
+                        </td>
+                        <td>
+                            {{ vm.sekolah.prodi.hasil.visitasi.peringkat_akhir }}
+                            ( {{ vm.sekolah.prodi.hasil.visitasi.nilai_akhir }} )
+                        </td>
+                        <td>
+                            <a
+                                href="http://opr2.bap-sm.or.id/api/v-cetak/{{ vm.token }}/{{ vm.sekolah.prodi.id}}"
+                                class="btn btn-default btn-sm" ng-disabled="!vm.sekolah.prodi.hasil.last_sync">
+                                <span class="octicon octicon-desktop-download"></span> Download hasil
+                            </a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <!-- END TAB SINKRONISASI -->
+
+    </div>
+</div>
