Fix target blanks

--- a/src/js/asesor/asesor-base.html
+++ b/src/js/asesor/asesor-base.html
@@ -61,7 +61,7 @@
           </button>
           <ul class="dropdown-menu">
             <li>
-                <a href="{{ vm.url }}/api/v-evaluasi/{{ vm.token }}/{{ sekolah.prodi.id }}">
+                <a href="{{ vm.url }}/api/v-evaluasi/{{ vm.token }}/{{ sekolah.prodi.id }}" target="_blank">
                     <span class="octicon octicon-file-text"></span> Evaluasi diri
                 </a>
             </li>
