--- a/src/js/asesor/asesor-base.html
+++ b/src/js/asesor/asesor-base.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="statistic">
                     <div class="value">
-                        -
+                        {{ sekolah.prodi.hasil.visitasi.peringkat_akhir }} ( {{ sekolah.prodi.hasil.visitasi.nilai_akhir }} )
                     </div>
                     <div class="label">
                         Visitasi
