--- a/src/js/asesor/asesor-visitasi.html
+++ b/src/js/asesor/asesor-visitasi.html
@@ -161,7 +161,10 @@
             <br />
             <div class="panel panel-default" ng-repeat="komponen in vm.sekolah.prodi.komponen">
                 <div class="panel-heading">{{ komponen.instrumen.nama }}</div>
-                <textarea class="form-control" ng-model="komponen.visitasi.ket" rows="8" style="border: none" placeholder="Tuliskan rekomendasi ..." required></textarea>
+                <textarea class="form-control" ng-model="komponen.visitasi.ket" rows="10" style="border: none" placeholder="Tuliskan rekomendasi minimal 400 karakter ..." required></textarea>
+                <div style="border-top: 1px solid #ddd; padding: 2px 5px 0px 15px;">
+                    <span class="help-block"> Anda mengetik sejumlah {{ komponen.visitasi.ket.length ? komponen.visitasi.ket.length : '0' }} karakter.</span>
+                </div>
             </div>
 
             <hr />
