--- a/src/js/asesor/asesor-base.html
+++ b/src/js/asesor/asesor-base.html
@@ -54,25 +54,25 @@
 		<div class="">{{ sekolah.alamat }}</div>
         <div><span class="octicon octicon-device-mobile"></span> {{ sekolah.nomor_telepon }} - {{ sekolah.nomor_hp}}</div>
         <hr />
+
         <!-- Single button -->
         <div class="btn-group">
-          <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span class="octicon octicon-desktop-download"></span> Download berkas <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li>
-                <a href="{{ vm.url }}/api/v-evaluasi/{{ vm.token }}/{{ sekolah.prodi.id }}" target="_blank">
-                    <span class="octicon octicon-file-text"></span> Evaluasi diri
-                </a>
-            </li>
-            <li>
-                <a href="{{ sekolah.prodi.hasil.evaluasi.dokumen }}" target="_blank">
-                    <span class="octicon octicon-file-pdf"></span> Dokumen pendukung
-                </a>
-            </li>
-          </ul>
+            <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="octicon octicon-desktop-download"></span> Download berkas <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+                <li>
+                    <a href="{{ vm.url }}/api/v-evaluasi/{{ vm.token }}/{{ sekolah.prodi.id }}" target="_blank">
+                        <span class="octicon octicon-file-pdf"></span> Evaluasi diri
+                    </a>
+                </li>
+                <li>
+                    <a href="{{ sekolah.prodi.hasil.evaluasi.dokumen }}" target="_blank">
+                        <span class="octicon octicon-file-pdf"></span> Dokumen pendukung
+                    </a>
+                </li>
+            </ul>
         </div>
-
         <a ui-sref="asesor.visitasi({npsn:sekolah.npsn, prodi: sekolah.prodi.id})" class="btn btn-default">
             Mulai visitasi <span class="octicon octicon-repo-force-push"></span>
         </a>
